samples/_failures_safe/1761657486_d2722b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df977ae7.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_df977ae7.c:166:13: error: expected expression at end of input
  166 |             case
      |             ^~~~
./samples/SAFE/__tmp_df977ae7.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df977ae7.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df977ae7.c:166:13: error: expected declaration or statement at end of input
